--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ GOOGLE_ID=587021295717-jv0he2duatv1v14eu790ps6enuohbu73.apps.googleusercontent.c
 GOOGLE_CLIENT_SECRET=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
 MONGODB_URI=mongodb+srv://Deiver:pq08la1t@cluster0.gdpg6p8.mongodb.net/?retryWrites=true&w=majority
 
-NEXTAUTH_URL=https://master--promptbites.netlify.app/
-NEXTAUTH_URL_INTERNAL=https://master--promptbites.netlify.app/
+NEXTAUTH_URL=https://promptbites.netlify.app
+NEXTAUTH_URL_INTERNAL=https://promptbites.netlify.app
 NEXTAUTH_SECRET=zuMWqNwyV5AeJkzniuIoQQVOaIfdrXoiLuHr6XGxFHY=
